infra/manifests/1-manifest/networking.k8s.io_v1-ingress-nginx-namespace-ingress-rules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: ingress-rules
  namespace: nginx-namespace
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: api-svc
            port:
              number: 80
        path: /
        pathType: Prefix
